--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,22 +21,45 @@ body {
 }
 
 /* Common */
+a {
+  text-decoration: none;
+}
+
 .container {
   width: 1170px;
   max-width: calc(100% - 40px);
   margin: 0 auto;
 }
 
-a {
-  text-decoration: none;
+.btn {
+  --height: 60px;
+  display: inline-block;
+  min-width: 205px;
+  height: var(--height);
+  padding: 0 20px;
+  border-radius: 99px;
+  border: 1px solid #2e80ce;
+  font-size: 1.6rem;
+  font-weight: 400;
+  text-align: center;
+  line-height: var(--height);
+  color: #fff;
+  background: #2e80ce;
+}
+
+.btn:hover {
+  opacity: 0.9;
+  cursor: pointer;
 }
 
 /* Header */
 .header {
   min-height: 100vh;
+  padding-top: 30px;
   background: var(--header-bg);
 }
 
+/* Logo */
 .logo {
   position: relative;
   display: inline-flex;
@@ -81,4 +104,49 @@ a {
 .logo__brand--small {
   font-size: 1.2em;
   font-weight: 300;
+}
+
+/* Header top */
+.header-top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.navbar {
+}
+
+.navbar__list {
+  display: flex;
+}
+
+.action__login,
+.navbar__link {
+  padding: 4px 21px;
+  font-size: 1.6rem;
+  font-weight: 300;
+  color: #c9d2da;
+}
+
+.navbar__link--active,
+.navbar__link:hover {
+  text-shadow: 1px 0 0 currentColor;
+  color: #fff;
+}
+
+.navbar__link--active::before {
+  position: relative;
+  top: -2px;
+  left: -8px;
+  content: "";
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: #fff;
+}
+
+.action__signup {
+  --height: 44px;
+  min-width: 104px;
 }
