--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,7 @@ a {
 
 .section-desc {
   margin-top: 18px;
+  width: 468px;
   font-weight: 300;
   font-size: 1.8rem;
   line-height: 1.67;
@@ -254,8 +255,7 @@ a {
   text-align: center;
 }
 
-.section-desc {
-  width: 468px;
+.service__desc {
   margin-left: auto;
   margin-right: auto;
 }
@@ -328,4 +328,54 @@ a {
   font-size: 1.6rem;
   line-height: 1.75;
   color: #575f66;
+}
+
+/* How it works */
+.work {
+  padding: 100px 0;
+  background: #f6fbff;
+}
+
+.work__list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 30px;
+  margin-top: 70px;
+}
+
+.work-item {
+  padding: 44px;
+  border: 16px solid #eaf6ff;
+  border-radius: 4px;
+  transition: 0.25s;
+}
+
+.work-item:hover {
+  transform: translateY(-16px);
+  border-color: #2e80ce;
+}
+
+.work-item__heading {
+  margin-top: 20px;
+  font-weight: 600;
+  font-size: 2.6rem;
+  line-height: 1.38;
+  color: #10375c;
+}
+
+.work-item__desc {
+  margin-top: 28px;
+  font-weight: 300;
+  font-size: 1.6rem;
+  line-height: 1.75;
+  color: #575f66;
+}
+
+.work-item__more {
+  display: inline-block;
+  margin-top: 18px;
+  font-weight: 300;
+  font-size: 1.6rem;
+  line-height: 1.75;
+  color: #2e80ce;
 }
